【WIP】完善LSM模型